
  Added automatic support for UTF-8 for both NLS_LANG and NLS_NCHAR
    Many thanks to Lincoln Baxter who did most of the hard work and testing
    and to Jeff Urlwin and others who also helped out.
    Perl 5.8.x highly recommended if you want to use Unicode.
    See POD for more information and documentation.
  Added many Unicode related tests thanks to Lincoln Baxter.
  Added Test::More as a prerequisite module.
  Added bind_param() support for SQL_BLOB & SQL_CLOB thanks to Stephen Clouse.
  Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
  Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
  Added $dbh->ora_can_unicode and $dbh->ora_nls_parameters thanks to Andy Hassall.
  Added gcc example to README.aix thanks to Adrian Terranova.
  Corrected typo in ora_lob_read() example thanks to Johannes Wierny.
  Corrected LOB example thanks to Sascha Pfalz.

=head1 Changes in DBD-Oracle 1.15   27th January 2004

  NOTE: DBD::Oracle now requires DBI version 1.28 (June 2002) or later.

  NOTE: This is probably the last release that will support being
  built with the old Oracle 7 OCI interface.

  NOTE: This release will build for perl 5.5 only after some manual edits
  which are detailed in README.help.  Future releases may not build for 5.5.
  Perl 5.5.3 is very old and and upgrading to at least 5.6.1 is recommended.
  The DBI itself has required perl >= 5.6.0 since DBI 1.38, August 2003.

  Fixed Makefile.PL for HPUX thanks to H.Merijn Brand & Sweth Chandramouli.
  Fixed Makefile.PL for handling 32/64bit libs thanks to Lincoln Baxter,
    Sean Kelly, Joel Van Boeckel and others. Oh the fun we've had.
  Fixed Makefile.PL error typo thanks to Martijn Koster.
  Fixed to build okay for Oracle 8.0.x and for older C compilers.
  Fixed minor omission in t/ph_test.t thanks to Tom Malaher.
  Fixed for extproc_perl (http://search.cpan.org/author/JHORWITZ/extproc_perl/)