@@ -60,6 +60,7 @@ t/23wide_db_al32utf8.t
 t/24implicit_utf8.t
 t/25plsql.t
 t/30long.t
+t/31lob.t
 t/40ph_type.t
 t/50cursor.t
 t/60reauth.t
